--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.27.0",
     "yup": "^1.4.0"
   },
