--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/material": "^6.1.9",
     "@tanstack/react-table": "^8.20.5",
     "modern-normalize": "^3.0.1",
+    "rc-progress": "^4.0.0",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
@@ -20,6 +24,7 @@
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
+    "react-popover": "^0.5.10",
     "react-router-dom": "^6.27.0",
     "yup": "^1.4.0"
   },
